# pre-commit-git

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
hooks/: prevent.py  prevent_branch_actions.py
prevent_branch_actions/: __main__.py
tests/mocks/: result.py
tests/unit/prevent_branch_actions/: test_prevent_branch_actions.py
