[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-git"
version = "1.0.0"
description = "Collection of git commit hooks"
readme = "README.md"
requires-python = ">=3.11.2"
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
prevent_branch_actions = "hooks.prevent_branch_actions:main"

[project.urls]
"Homepage" = "https://github.com/doublethink13/pre-commit-git"
"Bug Tracker" = "https://github.com/doublethink13/pre-commit-git/issues"

[tool.flake8]
max-line-length = 100
exclude = ["venv"]

[tool.isort]
profile = "black"
skip = ["venv"]
